@@ -1,3 +1,7 @@
+201810311
+Nightly Streamer reboot
+Possible streamer audio improvement
+
 201809151
 Define and store rtl-sdr gain
 Fix rtl-sdr frequency setting bug
